# slides

./: .gitignore  .prettierrc  package.json  tailwind.config.ts
.github/workflows/: build.yml  release.yml
src/: app.css
src-tauri/: Cargo.toml  build.rs  cudnn64_9.lib  cudnn_adv.lib  cudnn_cnn.lib  cudnn_engines_precompiled.lib  cudnn_engines_runtime_compiled.lib  cudnn_graph.lib  cudnn_heuristic.lib  cudnn_ops.lib  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/macros/: Cargo.toml
src-tauri/macros/src/: lib.rs
src-tauri/src/: commands.rs  main.rs  processing.rs  transcode.rs  whisper.rs
src/lib/: bindings.ts  session.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/lecture/: +page.svelte
src/routes/settings/: +page.svelte
